Fix alignment

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -154,7 +154,7 @@ h3{
 }
 
 .two-col{
-	text-align: left;
+	text-align: justify;
     font-family: 'Raleway', sans-serif;
 	font-size: 24px;
 }
